--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,12 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/616/616490.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/9248/9248795.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/616/616490.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/9248/9248795.png",
       "sizes": "512x512",
       "type": "image/png"
     }
